--- a/src/app/skills/skills.component.css
+++ b/src/app/skills/skills.component.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: stretch;
 }
 
 .skills-section {
